# CinePick

Proyecto_Cine/: CMakeLists.txt  CMakeLists.txt.user.16140ab  CMakeLists.txt.user.e9c2534  Movie.h  TreeB.h  ap.cpp  ap.h  ap.ui  arbolb.cpp  arbolb.h  images.qrc  info_programa.cpp  info_programa.h  info_programa.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mostrar_p.cpp  mostrar_p.h  mostrar_p.ui  pagina.cpp  pagina.h  rp.cpp  rp.h  rp.ui  welcome.cpp  welcome.h  welcome.ui
